--- a/bootstrap/test-skip-validation.yaml
+++ b/bootstrap/test-skip-validation.yaml
@@ -37,7 +37,7 @@ data:
       defVersion: null
       ingressClassName: nginx
       ingressController: k8s.io/ingress-nginx
-      ingressHost: https://kim-dev.pipeline-team.cf-cd.com
+      ingressHost: http://localhost:3017
       ref: ""
       repo: https://github.com/kim-codefresh/test-skip-validation.git
       requiredCLIVersion: ^0.1.0
